--- a/intended/structured_configs/amber-spine1.yml
+++ b/intended/structured_configs/amber-spine1.yml
@@ -1,4 +1,5 @@
 hostname: amber-spine1
+is_deployed: true
 router_bgp:
   as: '65100'
   router_id: 10.255.1.1
@@ -24,26 +25,32 @@ router_bgp:
   - ip_address: 10.255.254.1
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65101'
+    peer: amber-leaf1
     description: amber-leaf1_Ethernet1
   - ip_address: 10.255.254.3
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65101'
+    peer: amber-leaf1
     description: amber-leaf1_Ethernet2
   - ip_address: 10.255.254.9
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65102'
+    peer: amber-leaf2
     description: amber-leaf2_Ethernet1
   - ip_address: 10.255.254.11
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65102'
+    peer: amber-leaf2
     description: amber-leaf2_Ethernet2
   - ip_address: 10.255.253.1
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65401'
+    peer: media-PTP-1
     description: media-PTP-1_Ethernet1
   - ip_address: 10.255.253.5
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65402'
+    peer: media-PTP-2
     description: media-PTP-2_Ethernet1
 static_routes:
 - vrf: MGMT
@@ -238,3 +245,5 @@ loopback_interfaces:
   ip_address: 10.255.1.1/32
 ip_igmp_snooping:
   globally_enabled: true
+metadata:
+  platform: vEOS-lab
