--- a/intended/structured_configs/blue-leaf1.yml
+++ b/intended/structured_configs/blue-leaf1.yml
@@ -1,4 +1,5 @@
 hostname: blue-leaf1
+is_deployed: true
 router_bgp:
   as: '65201'
   router_id: 10.255.2.2
@@ -24,10 +25,12 @@ router_bgp:
   - ip_address: 10.255.255.0
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65200'
+    peer: blue-spine1
     description: blue-spine1_Ethernet1
   - ip_address: 10.255.255.2
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65200'
+    peer: blue-spine1
     description: blue-spine1_Ethernet2
 static_routes:
 - vrf: MGMT
@@ -1121,3 +1124,5 @@ vlan_interfaces:
   description: VLAN211
   shutdown: false
   ip_address: 10.10.211.1/24
+metadata:
+  platform: vEOS-lab
