--- a/intended/structured_configs/blue-leaf2.yml
+++ b/intended/structured_configs/blue-leaf2.yml
@@ -1,4 +1,5 @@
 hostname: blue-leaf2
+is_deployed: true
 router_bgp:
   as: '65202'
   router_id: 10.255.2.3
@@ -24,10 +25,12 @@ router_bgp:
   - ip_address: 10.255.255.8
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65200'
+    peer: blue-spine1
     description: blue-spine1_Ethernet3
   - ip_address: 10.255.255.10
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65200'
+    peer: blue-spine1
     description: blue-spine1_Ethernet4
 static_routes:
 - vrf: MGMT
@@ -1121,3 +1124,5 @@ vlan_interfaces:
   description: VLAN212
   shutdown: false
   ip_address: 10.10.212.1/24
+metadata:
+  platform: vEOS-lab
