--- a/intended/structured_configs/media-PTP-1.yml
+++ b/intended/structured_configs/media-PTP-1.yml
@@ -1,4 +1,5 @@
 hostname: media-PTP-1
+is_deployed: true
 router_bgp:
   as: '65401'
   router_id: 10.255.3.1
@@ -24,10 +25,12 @@ router_bgp:
   - ip_address: 10.255.253.0
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65100'
+    peer: amber-spine1
     description: amber-spine1_Ethernet5
   - ip_address: 10.255.253.2
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65200'
+    peer: blue-spine1
     description: blue-spine1_Ethernet5
 static_routes:
 - vrf: MGMT
@@ -508,3 +511,5 @@ vlan_interfaces:
   description: VLAN131
   shutdown: false
   ip_address: 10.10.131.1/24
+metadata:
+  platform: vEOS-lab
